--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3050,6 +3050,27 @@
 	year = {1992}
 }
 
+@article{SINKHORN-KNOPP-1967,
+        author = {R. Sinkhorn and P. Knopp},
+        title = {Concerning nonnegative matrices and doubly stochastic matrices},
+        journal = {Pacific Journal of Mathematics, 21(2)},
+        year = {1967}
+}
+
+@article{PATRICK-AMESTOY-2008,
+        author = {Amestoy P.R., Duff I.S., Ruiz D., Ucar B},
+        title = {A parallel Matrix Scaling Algorithm},
+        journal = {High Performance Computing for Computational Science - VECPAR 2008},
+        year = {2008}
+}
+
+@article{SUITESPARSE-QR-2011,
+       author = {Timothy A. Davis},
+       title = {SuiteSparseQR: Multifrontal multithreaded rank-revealing sparse QR factorization},
+       journal = {ACM Transactions on Mathematical Software},
+       year = {2011}
+}
+
 @article{FUMAGALLI-CND-2011,
 	author = {A. Fumagalli and P. Masarati and M. Morandini and P. Mantegazza},
 	title = {Control Constraint Realization for Multibody Systems},
