--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3058,7 +3058,7 @@
 }
 
 @article{PATRICK-AMESTOY-2008,
-        author = {Amestoy P.R., Duff I.S., Ruiz D., Ucar B},
+        author = {Amestoy P.R. and Duff I.S. and Ruiz D. and Ucar B},
         title = {A parallel Matrix Scaling Algorithm},
         journal = {High Performance Computing for Computational Science - VECPAR 2008},
         year = {2008}
