--- a/manual/input/input.tex
+++ b/manual/input/input.tex
@@ -66,7 +66,8 @@
 %\newcommand{\ty}[1]{\texttt{#1}}
 
 \newcommand{\T}[1]{\boldsymbol{#1}}
-\newcommand{\TT}[1]{\boldsymbol{#1}}
+%\newcommand{\TT}[1]{\boldsymbol{#1}}
+\newcommand{\TT}[1]{\bm{\mathbf #1}}
 
 % Custom
 \topmargin 0.31cm % 0.00cm
