scalarfunctions.tex: corrected defintiions of sin and cos, change \Phi to \theta

--- a/manual/input/scalarfunctions.tex
+++ b/manual/input/scalarfunctions.tex
@@ -35,8 +35,8 @@ the function as well. Currently implemented scalar functions are
 \item \kw{exp}: $f(x)=m\cdot b^{c\cdot{x}}$
 \item \kw{log}: $f(x)=m\cdot\textrm{log}_b(c\cdot{x})$
 \item \kw{pow}: $f(x)=x^p$
-\item \kw{sin}: $f(x)=A*\sin(\omega x + \Phi)$
-\item \kw{cos}: $f(x)=A*\cos(\omega x + \Phi)$
+\item \kw{sin}: $f(x)=A \cdot \sin(\omega \cdot x + \theta)$
+\item \kw{cos}: $f(x)=A \cdot \cos(\omega \cdot x + \theta)$
 \item \kw{linear}: linear interpolation between the two points $(x_1,y_1)$
 and $(x_2,y_2)$
 \item \kw{cubicspline}: cubic natural spline interpolation between the
