--- a/manual/tecman/tecman-hydr.tex
+++ b/manual/tecman/tecman-hydr.tex
@@ -39,7 +39,7 @@ and hydraulic nodes; the constraints between the structural nodes,
 and other flow elements, e.g.\ leakages between the chambers, 
 must be added by the user.
 
-\subsection{Definitions}
+\subsubsection{Definitions}
 In the following, $\plbr{\cdot}_{s1}$ and $\plbr{\cdot}_{s2}$
 refer to structural nodes 1 and 2, 
 and $\plbr{\cdot}_{h1}$ and $\plbr{\cdot}_{h2}$
@@ -55,7 +55,7 @@ if any, is about the axis itself.
 This can be obtained by combining an inline joint with 
 a revolute rotation or a prismatic joint.
 
-\subsection{Equations}
+\subsubsection{Equations}
 \begin{eqnarray*}
 	0 & = & -\T{F} \\
 	0 & = & -\T{f}_{s1}\times\T{F} \\
@@ -114,7 +114,7 @@ constraints must account for them.
 \subsection{Dynamic Pipe}
 Finite Volume dynamic pipe.
 
-\subsection{Definitions}
+\subsubsection{Definitions}
 The dynamic pipe is formulated according to the finite volume approach.
 The pipe is discretized by means of the pressures and the flow 
 at the two ends, which are interpolated linearly.
