first attempt at documentin (useless) element

--- a/manual/tecman/tecman-hydr.tex
+++ b/manual/tecman/tecman-hydr.tex
@@ -280,3 +280,23 @@ of the {\em Reynolds}\ number, is modeled for $2000<Re<4000$.
 	p_1 & = & P_1 \\
 	p_2 & = & P_2
 \end{eqnarray*}
+
+
+\subsection{Pressure Flow Control Valve}
+\begin{align}
+	R_1 &= Q_{12} + Q_{13}
+	\\
+	R_2 &= -Q_{12} + Q_{24}
+	\\
+	R_3 &= -Q_{13} + Q_{34}
+	\\
+	R_4 &= -Q_{34} - Q_{24}
+	\\
+	R_5 &= A_v s;
+	\\
+	R_6 &= -A_v s
+	\\
+	R_7 &= -F + M \dot{v} + C \dot{s} + K s + c_1 s + c_2 \dot{s} + c_3 \dot{v} + cf_1 (s - s_{\max}) + cf_2 \dot{s} + cf_3 \dot{v}
+	\\
+	R_8 &= \dot{s} - v
+\end{align}
