--- a/manual/input/beam.tex
+++ b/manual/input/beam.tex
@@ -1485,6 +1485,41 @@ of the abstract nodes that represent the input signal tensions, as follows:
 where the \nt{abstract\_node\_label\_list} is the list of the labels of the
 abstract nodes that represent the electrodes.
 
+A fully coupled piezoelectric beam element is available as well; an arbitrary
+linear piezoelectric actuation matrix is required, together with the labels
+of the abstract nodes that represent the input signal tensions, as follows:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{normal_arglist} ::=
+        \bnt{node_1_label} , (\hty{Vec3}) \bnt{relative_offset_1} ,
+        \bnt{node_2_label} , (\hty{Vec3}) \bnt{relative_offset_2} ,
+        \bnt{node_3_label} , (\hty{Vec3}) \bnt{relative_offset_3} ,
+        (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I} ,
+        \{ \kw{same} | (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_II} \} ,
+        \{ \kw{same} | (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_II} \} ,
+        \kw{piezoelectric beam} , 
+            \bnt{electrodes_number} ,
+            \bnt{abstract_node_label_list} ,
+            (\hty{Mat6xN}) \bnt{piezoelectric_matrix_I} ,
+            (\hty{MatNx6}) \bnt{piezoelectric_charges_def_I} ,
+            (\hty{MatNxN}) \bnt{piezoelectric_charges_potential_I} ,
+            \{ 
+                \kw{same}
+               |
+                (\hty{Mat6xN}) \bnt{piezoelectric_matrix_II} 
+                (\hty{MatNx6}) \bnt{piezoelectric_charges_def_II} ,
+                (\hty{MatNxN}) \bnt{piezoelectric_charges_potential_II}
+            \}
+        [ , \bnt{custom_output} ]
+\end{Verbatim}
+%\end{verbatim}
+where the \nt{abstract\_node\_label\_list} is the list of the labels of the
+abstract nodes that represent the electrodes, \nt{piezoelectric\_charges\_def} give
+to compute the charge per unit of length as a function of the beam generalized
+deformation measures, and \nt{piezoelectric\_charges\_potential} the charge per unit of length 
+as a function of the electrodes potential.
+
 
 \paragraph{Private Data}
 \label{sec:EL:BEAM:PRIVATE}
