--- a/manual/input/overview.tex
+++ b/manual/input/overview.tex
@@ -215,23 +215,26 @@ To ease the creation of MBDyn file, several syntax highlighting plugins, for
 different text editors, can be used:
 
 \begin{itemize}
-  \item \htmladdnormallink{Vim}{http://www.vim.org/}
-  (and its GUI variants): syntax highlighting for MBDyn can be activated by
+  \item \textbf{Vim} 
+  (\htmladdnormallink{\texttt{http://www.vim.org/}}{http://www.vim.org/})
+  and its GUI variants: syntax highlighting for MBDyn can be activated by
   adding the \bnt{mbdyn-directory}\kw{/var/mbd.vim} file to the
   \kw{\textasciitilde{}/.vim/syntax/} folder;
   %
-  \item \htmladdnormallink{Geany}{http://www.geany.org/}: the
-  methodology to add MBDyn syntax highlighting is given in Geany's
-  \htmladdnormallink{wiki}{http://wiki.geany.org/config/mbdyn}.
+  \item \textbf{Geany} 
+  (\htmladdnormallink{\texttt{http://www.geany.org/}}{http://www.geany.org/})
+  : the way to add MBDyn syntax highlighting is given in Geany's wiki at
+  \htmladdnormallink{\texttt{http://wiki.geany.org/config/mbdyn}}{http://wiki.geany.org/config/mbdyn}.
   %
-  \item \htmladdnormallink{Kate and KWrite}{https://kate-editor.org/}:
-  instructions to add MBDyn syntax support can be found
-  \htmladdnormallink{here}{https://github.com/pietrodantuono/MBDynSyntaxHighlightingForKate};
+  \item \textbf{Kate and KWrite} 
+  (\htmladdnormallink{\texttt{https://kate-editor.org/}}{https://kate-editor.org/}):
+  instructions to add MBDyn syntax support can be found here:
+  \htmladdnormallink{\texttt{https://github.com/pietrodantuono/MBDynSyntaxHighlightingForKate}}{https://github.com/pietrodantuono/MBDynSyntaxHighlightingForKate};
   %
-  \item \htmladdnormallink{Atom}{https://atom.io/}: the
-  \htmladdnormallink{language-mbdyn}{https://atom.io/packages/language-mbdyn}
-  package can be installed directly from the Atom \texttt{Preferences->Install}
-  panel: it provides both MBDyn syntax highlighting and autocompletion snippets.
+  \item \textbf{Atom} (\htmladdnormallink{\texttt{https://atom.io/}}{https://atom.io/}): the 
+  \textbf{language-mbdyn} package can be installed directly from the Atom 
+  \texttt{Preferences->Install}   panel: it provides both MBDyn syntax highlighting 
+  and autocompletion snippets.
 \end{itemize}
 
 \section{Output}
